--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -45,9 +45,9 @@ The metadata are information related to the samples and the markers.
 The marker information consists of: channel, antigen and class of the marker.
 The marker class is either *type*, *state* or *none*: 
 
-- *type* markers are gating/phenotype markers. They are commonly used to perfors 
+- *type* markers are gating/phenotype markers. They are commonly used to perform 
 Differential Abundance (DA) tests;
-- *state* markers are functional markers. They are commonly used to perfors 
+- *state* markers are functional markers. They are commonly used to perform 
 Differential State (DS) tests;
 - *none* markers won't be used for testing, e.g. event length.
 
