--- a/vignettes/clustering.Rmd
+++ b/vignettes/clustering.Rmd
@@ -90,7 +90,7 @@ package which stores the files into a `flowSet` object.
 path_data <- system.file("extdata", package = "CyTOFtoolbox")
 # Read files as a flowSet
 flowSet_aghaeepour_sub_data <- read.flowSet(files = samples_info$filename,
-                                    path = path_data)
+                                            path = path_data)
 ```
 
 ### Check the file names
@@ -117,35 +117,35 @@ the FCS files. If it is not the case, we add the missing marker(s) to this list.
 if (!all(colnames(flowSet_aghaeepour_sub_data) %in%
          as.character(markers_info$fcs_colname))) {
   warning("Marker names of the flowset not corresponding to the marker file names of the metadata. Please check.")
+  # Complete the marker list
+  # Get the name of the markers who are missing in the markers metadata
+  all_markers <- colnames(flowSet_aghaeepour_sub_data) %in%
+    markers_info$fcs_colname
+  missing_markers <- subset(colnames(flowSet_aghaeepour_sub_data),
+                            !all_markers)
+  # Create a data.frame of the missing markers
+  df_missing_markers <- data.frame("fcs_colname" = missing_markers,
+                                   "antigen" = missing_markers,
+                                   "marker_class" = "none")
+  # Add the missing markers to the metadata
+  markers_info_withmissingmarkers <- rbind(df_missing_markers, markers_info)
 }
-# Complete the marker list
-# Get the name of the markers who are missing in the markers metadata
-all_markers <- colnames(flowSet_aghaeepour_sub_data) %in%
-                  markers_info$fcs_colname
-missing_markers <- subset(colnames(flowSet_aghaeepour_sub_data),
-                                      !all_markers)
-# Create a data.frame of the missing markers
-df_missing_markers <- data.frame("fcs_colname" = missing_markers,
-                                 "antigen" = missing_markers,
-                                 "marker_class" = "none")
-# Add the missing markers to the metadata
-markers_info_withmissingmarkers <- rbind(df_missing_markers, markers_info)
 ```
 
 ## Prepare the data
 
-The last step is to create a `SingleCellExperiment` containing the FCS file values,
+The last step is to create a `SingleCellExperiment` (SCE) containing the FCS file values,
 as well as the metadata.
 
 ```{r prepare_data}
 ## Prepare the data
 aghaeepour_sub_data <- CATALYST::prepData(flowSet_aghaeepour_sub_data,
-                                  panel = markers_info_withmissingmarkers,
-                                  md = samples_info,
-                                  md_cols = list(file = "filename",
-                                                 id = "filename",
-                                                 factors = c("patient_id", "condition")),
-                                  cofactor = 5) # automatically applied arcsinh transformation with cofactor = 5
+                                          panel = markers_info_withmissingmarkers,
+                                          md = samples_info,
+                                          md_cols = list(file = "filename",
+                                                         id = "filename",
+                                                         factors = c("patient_id", "condition")),
+                                          cofactor = 5) # automatically applied arcsinh transformation with cofactor = 5
 
 ```
 
@@ -161,12 +161,12 @@ will be performed.
 type_markers(aghaeepour_sub_data)
 # Cluster
 aghaeepour_sub_data <- cluster(aghaeepour_sub_data, 
-                           features = type_markers(aghaeepour_sub_data),
-                           xdim = 10, ydim = 10, maxK = 20, 
-                           verbose = FALSE, seed = 1234)
+                               features = type_markers(aghaeepour_sub_data),
+                               xdim = 10, ydim = 10, maxK = 20, 
+                               verbose = FALSE, seed = 1234)
 ```
 
-Based on the delta area plot which represent the stability gained when using
+Based on the delta area plot which represents the stability gained when using
 $k$ clusters, we can determine the *optimal* number of cluster:
 
 ```{r delta_aera_plot}
@@ -176,7 +176,7 @@ metadata(aghaeepour_sub_data)$delta_area
 
 ## Dimensionality reduction with UMAP
 
-The dimension reduction is computed with UMAP.
+The dimensionality reduction (DR) is computed with UMAP, using the `uwot` package.
 
 ```{r UMAP}
 # Extract data from sce object
@@ -184,6 +184,11 @@ umap_aghaeepour_input_data <- t(assay(aghaeepour_sub_data))
 # UMAP dimensionality reduction
 set.seed(1234)
 dr_umap_aghaeepour <- uwot::umap(umap_aghaeepour_input_data, n_neighbors = 20, min_dist = 0.1)
+```
+
+The computed DR is added to the SCE object.
+
+```{r UMAP_to_SCE}
 # Add the dimensionality reduction to the SCE
 colnames(dr_umap_aghaeepour) <- c("X1", "X2")
 reducedDims(aghaeepour_sub_data) <- list("UMAP" = dr_umap_aghaeepour)
@@ -197,15 +202,15 @@ the dimensional reduction space (as UMAP). It is a `ggplot2` object.
 ```{r plot_cluster, eval = TRUE}
 # Extract SCE information before plotting
 aghaeepour_expinfo_dr_metacluster_values <- extract_SCE_info(sce = aghaeepour_sub_data,
-                                                              metacluster = "meta6")
+                                                             metacluster = "meta6")
 
 # Plot
 plot_metaclusters(df = aghaeepour_expinfo_dr_metacluster_values, 
                   metacluster = "meta6")
 ```
 
-To save the plot as a png image (in case the dataset contains too many points 
-and cannot be saved as a PDF), the following code can be used and adpated:
+To save the plot as a *png* image (in case the dataset contains too many points 
+and cannot be saved as a PDF), the following code can be used and adapted:
 
 ```{r cluster_savepng, eval = FALSE}
 # DOES NOT RUN 
@@ -235,16 +240,16 @@ ratio tests:
 ```{r DA_tests_edgeR}
 # Create design & constrast matrix
 design_matrix_aghaeepour <- createDesignMatrix(ei(aghaeepour_sub_data), 
-                                                cols_design = "condition")
+                                               cols_design = "condition")
 contrast_aghaeepour <- createContrast(c(0, 1))
 # Test with edgeR
 ## Default method recommended by the package
 res_DA_aghaeepour_edgeR <- diffcyt(aghaeepour_sub_data, 
-                              clustering_to_use = "meta6",
-                              analysis_type = "DA", 
-                              method_DA = "diffcyt-DA-edgeR",
-                              design = design_matrix_aghaeepour, 
-                              contrast = contrast_aghaeepour)
+                                   clustering_to_use = "meta6",
+                                   analysis_type = "DA", 
+                                   method_DA = "diffcyt-DA-edgeR",
+                                   design = design_matrix_aghaeepour, 
+                                   contrast = contrast_aghaeepour)
 ```
 
 There is a non-parametric test available with `voom`. The `voom` method transforms 
@@ -260,12 +265,12 @@ for each cluster.
 # Test with voom
 ## Non-parametric test
 res_DA_aghaeepour_voom <- diffcyt(aghaeepour_sub_data, 
-                              clustering_to_use = "meta6",
-                              analysis_type = "DA", 
-                              method_DA = "diffcyt-DA-voom",
-                              design = design_matrix_aghaeepour, 
-                              contrast = contrast_aghaeepour, 
-                              plot = FALSE)
+                                  clustering_to_use = "meta6",
+                                  analysis_type = "DA", 
+                                  method_DA = "diffcyt-DA-voom",
+                                  design = design_matrix_aghaeepour, 
+                                  contrast = contrast_aghaeepour, 
+                                  plot = FALSE)
 ```
 
 Additional notes for the analysis:
@@ -323,8 +328,8 @@ an input parameter in the `plotDAheatmap` function.
 # Define the colors which will be used for the heatmaps
 # Keeps only the columns which will be displayed on the top part of the heatmap
 df_levels <- as.data.frame(colData(aghaeepour_sub_data)) %>% 
-   dplyr::select(-cluster_id, -sample_id) %>% 
-   unique()
+  dplyr::select(-cluster_id, -sample_id) %>% 
+  unique()
 # Order the values based on the comparison we want to test
 df_levels <- data.frame(df_levels[order(df_levels[,"condition"]),], row.names = NULL)
 # Generate the colors
