--- a/vignettes/CytoGLMM-extension.Rmd
+++ b/vignettes/CytoGLMM-extension.Rmd
@@ -1,14 +1,13 @@
 ---
-title: "CytoGLMM extension"
+title: "CytoGLMM extension" 
 author: "Anne-Maud Ferreira"
 date: "`r Sys.Date()`"
-output: 
-  rmarkdown::html_vignette: 
-    toc: true
+package: CyTOFtoolbox
+output: BiocStyle::html_document
 vignette: >
-  %\VignetteIndexEntry{CytoGLMM-extension}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+    %\VignetteIndexEntry{CytoGLMM-extension}
+    %\VignetteEngine{knitr::rmarkdown}
+    %\VignetteEncoding{UTF-8}  
 ---
 
 ```{r, include = FALSE}
@@ -20,12 +19,12 @@ knitr::opts_chunk$set(
 )
 ```
 
+# Environment set up
+
 ```{r setup, warning = FALSE, message = FALSE}
 library(CyTOFtoolbox)
 library(CytoGLMM)
-library(SummarizedExperiment)
-library(magrittr)
-library(tidyverse)
+library(dplyr)
 ```
 
 # Introduction
@@ -33,94 +32,52 @@ library(tidyverse)
 This is a short vignette showing an example of the volcano plot and modified
 MDS plot.
 
-# Aghaeepour et al. (2017) dataset
+# Data generation
 
-As an example, the Aghaeepour et al. (2017) dataset was used:
+We use the data generation process available in the `CytoGLMM` package:
 
-- Selection of 16 women from the Aghaeepour et al. (2017) dataset 
-- Samples from the first and third trimester of their pregnancy stimulated by IFN$\alpha$
-
-```{r load_data}
-# Path
-zenodo_url <- "https://zenodo.org/record/2652578/files/"
-cytof_data <- "se_aghaeepour2017immune.Rdata"
-# Download data
-## se_aghaeepour2017immune is an SummarizedExperiment object
-load(url(paste0(zenodo_url, cytof_data)))
-```
-
-## Pre-processing of the data 
-
-The data are processed as in the example of the CytoGLMM workflow available [online](https://christofseiler.github.io/CytoGLMM/articles/CytoGLMM.html#generalized-linear-model-with-bootstrap):
-
-
-```{r process_data}
-# Extract the values
-exprs <- assay(se_aghaeepour2017immune)
-# Extract the sample information
-sample_info <- rowData(se_aghaeepour2017immune)
-# Extract the sample names
-sample_info_names <- names(sample_info)
-# Create a data frame with the expression values and the sample information
-df_samples <- cbind(as.data.frame(exprs), as.data.frame(sample_info))
-df_samples %<>% as_tibble
+```{r generate_data}
+# Set seed
+set.seed(23)
+# Generate the data
+df_raw <- generate_data()
 # Extract protein names
-protein_names <- colData(se_aghaeepour2017immune) %>% 
-  as.data.frame %>% 
-  dplyr::filter(type == "function") %>%
-  .$protein_name
-
-# Subset to NK cell population
-df_samples_NKcells <- df_samples %>% dplyr::filter(celltype == "NK")
-df_samples_NKcells %<>% dplyr::select(protein_names, sample_info_names)
-
+protein_names <- names(df_raw)[3:12]
 # Transform the data
-df_samples_NKcells_transformed <- df_samples_NKcells %>% 
-  dplyr::mutate_at(protein_names, 
-                   function(x) asinh(x/5))
+df <- dplyr::mutate_at(df_raw, protein_names, function(x) asinh(x/5))
 ```
 
 ## MDS plot
 
 The MDS plot provided by the `CytoGLMM` has been modified to add a threshold 
-on how much the markers medians correlate with the MDS dimensions.
+on how much the markers medians correlate with the MDS dimensions. The
+input parameters `cor_threshold` is used to defined this threshold:
 
 ```{r mds_plot}
-plot_MDS_withthreshold(df_samples = df_samples_NKcells,
+plot_MDS_withthreshold(df_samples = df,
                        protein_names = protein_names, 
-                       sample_info_names = sample_info_names, 
-                       color = "term",
+                       sample_info_names = c("donor", "condition"), 
+                       color = "condition",
                        cor_threshold = 0.2)
 ```
-
 
 ## Fit the GLMM model
 
 Fit a Generalized Linear Mixed Model (GLMM) with donor random effects.
 
-```{r fit_cytoglmm, eval = FALSE}
-# Does not run 
-CytoGLMM_glmm_fit_aghaeepour2017immune <- 
-  CytoGLMM::cytoglmm(df_samples_NKcells_transformed, 
-                     protein_names = protein_names,
-                     condition = "term", 
-                     group = "donor",
-                     cell_n_subsample = 1000, # Subsample is used ONLY for the sake of the data size
-                     num_cores = 4)
-```
-
-The model was run outside of this vignette and store internally in the package, running exactly the previous chunks.
-
-```{r load_fit_cytoglmm}
-data("CytoGLMM_glmm_fit_aghaeepour2017immune")
+```{r fit_cytoglmm, warning = FALSE}
+glmm_fit <- CytoGLMM::cytoglmm(df,
+                              protein_names = protein_names,
+                              condition = "condition",
+                              group = "donor",
+                              num_cores = 1)
 ```
 
 Plot the output of the analysis:
 
-```{r plot_fit_cytoglmm}
-plot(CytoGLMM_glmm_fit_aghaeepour2017immune, order = TRUE)
+```{r plot_fit_cytoglmm, warning = FALSE}
+plot(glmm_fit, order = TRUE)
 ```
-
 
 # Volcano plot
 
@@ -137,10 +94,15 @@ using the input parameter alpha in the `prepare_data_for_volcanoplot` function.
 
 ```{r volcano_plot}
 # Prepare the data
-data_for_volplot <- prepare_data_for_volcanoplot(data = df_samples_NKcells, 
+data_for_volplot <- prepare_data_for_volcanoplot(data = df_raw, 
                                                  protein_names = protein_names,
-                                                 condition = "term", 
-                                                 CytoGLMM_fit = CytoGLMM_glmm_fit_aghaeepour2017immune)
+                                                 condition = "condition", 
+                                                 CytoGLMM_fit = glmm_fit)
 # Volcano plot
 volcano_plot(data = data_for_volplot)
+```
+# Session information
+
+```{r sessioninfo}
+sessionInfo()
 ```
